# workout-verify

./: .gitignore  README.md  joints_history_pullup.pickle  joints_history_random.pickle  joints_history_squats.pickle  kpts.pickle  kpts_random.pickle  main.py  pyproject.toml  test_threading.py
cache/: good_and_bad_ktps_hands.pickle  good_and_bad_ktps_joints.pickle  pullup_multi_good_ktps_joints.pickle  pullup_squats_ktps_hands.pickle  pullup_squats_ktps_joints.pickle  squats_and_pullups_hands_ktps_hands.pickle  squats_and_pullups_hands_ktps_joints.pickle  squats_hands_ktps_hands.pickle  squats_hands_ktps_joints.pickle
data/examples/squat_good/: squat_good_3.mov
notebooks/: inf573-hand_experiment_clean.ipynb  model_exploration.ipynb  patrick_joint_angles.ipynb  rotations_wrt_tpose.ipynb  sliding_window_classifier.pkl  visualisations.ipynb  workout_classification.ipynb
src/models/: sliding_window_classifier.pkl  workout_classifier.py
src/utils/: joint_features.py  utils.py  workout_rules.py
src/video_pipeline/: forward_stage_advice.py  forward_stage_classify.py  forward_stage_hands.py  forward_stage_inference.py  forward_stage_joints.py  init_stage_load.py  terminal_stage.py
src/video_pipeline/schemas/: data_stage_advice.py  data_stage_classify.py  data_stage_hands.py  data_stage_inference.py  data_stage_joints.py  data_stage_load.py  data_terminal_stage.py
vis_results/: results_good_and_bad.json  results_pullup_squats.json  results_squat_demo.json  results_squat_static.json  results_squats_hands.json
